<resources>
    <string name="app_name">Ghost SMS</string>
    <string name="read_sms_request_permission_title">Read SMS permission</string>
    <string name="read_sms_request_permission_message">Permission to read SMS is needed for this app</string>
    <string name="read_contacts_request_permission_title">Read contacts permission</string>
    <string name="read_contacts_request_permission_message">Permission to read contacts is needed for this app</string>
    <string name="send_sms_request_permission_title">Send SMS permission</string>
    <string name="send_sms_request_permission_message">Permission to Send SMS is needed for this app</string>
    <string name="receive_sms_request_permission_title">Receive SMS permission</string>
    <string name="receive_sms_request_permission_message">Permission to Receive SMS is needed for this app</string>
    <string name="sms_not_supported_title">SMS not supported</string>
    <string name="sms_not_supported_message">Your device probably does not support SMS</string>
    <string name="new_pattern_lock">New pattern lock</string>
    <string name="repeat_pattern_lock">Repeat pattern lock</string>
    <string name="unlock_app">Enter pattern lock</string>
    <string name="compose">Compose</string>
    <string name="reply">Reply</string>
    <string name="remove_sms">Remove</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="sms_remove_title">Remove Sms</string>
    <string name="sms_remove_description">1 Sms will be deleted</string>

    <string name="write_settings_request_permission_title">Write settings permission</string>
    <string name="write_settings_request_permission_message">Permission to write settings is needed for this app</string>
    <string name="encryption_on">Encryption on</string>
    <string name="encryption_off">Encryption off</string>
    <string name="new_message">new message …</string>
    <string name="message_decryption_fail">oops, something went wrong!</string>
    <string name="chat_username_me">Me</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="message_empty_error">Text message should not be empty</string>
    <string name="public_rsa_key">Public RSA key</string>
    <string name="remember_public_key">Remember this key</string>
    <string name="send">Send</string>
    <string name="pref_security">Security</string>
    <string name="reset_rsa_keys_title">Regenerate encryption keys</string>
    <string name="test_mode_title">Test mode</string>
    <string name="test_mode_summary">enable this option to stop sending sms for real</string>
    <string name="reset_rsa_key_summary">Click to regenerate RSA Public and private encryption keys. All previously received messages will be undecryptable.</string>
    <string name="reset_rsa_keys_confirmation">All your previously received messages will be undecryptable if your RSA keys are regenerated. Will you proceed?</string>
    <string name="share_public_rsa_key_title">Share public RSA key</string>
    <string name="share_public_rsa_key_summary">Share your public key with the persons you want to receive encrypted messages from.</string>
    <string name="change_lock_pattern_title">Change lock pattern</string>
    <string name="change_lock_pattern_summary">Click to change access lock pattern</string>
    <string name="current_pattern_lock">Current pattern lock</string>
    <string name="request_public_key_message">I want to send you a secure sms via Ghost SMS app. If you have not already installed this app on your android phone, please do it. Copy your public key from Ghost SMS settings section and send it to me.</string>
    <string name="settings">Settings</string>
</resources>
